--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -22,11 +22,11 @@ jobs:
 
     - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
+    echo "::set-env name=NEXT_TAG::(./github/utils/bump_patch.sh (git describe --tags `git rev-list --tags --max-count=1`)" 
+
     - name: package
       run: PACKAGE_DIR=artifact ./scripts/package.sh -a
 
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v2
 
     - name: Create Release
       id: create_release
@@ -34,10 +34,9 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        #tag_name: ${{ github.ref }}
-        tag_name: 0.0.122
+        tag_name: ${{ env.NEXT_TAG }} 
         #release_name: Release ${{ github.ref }}
-        release_name: Release 0.0.122
+        release_name: Release ${{ env.NEXT_TAG }}
         body: |
           Changes in this Release
           - First Change
