--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -22,7 +22,7 @@ jobs:
 
     - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
-    echo "::set-env name=NEXT_TAG::(./github/utils/bump_patch.sh (git describe --tags `git rev-list --tags --max-count=1`)" 
+    - run: echo "::set-env name=NEXT_TAG::(./github/utils/bump_patch.sh (git describe --tags `git rev-list --tags --max-count=1`)"
 
     - name: package
       run: PACKAGE_DIR=artifact ./scripts/package.sh -a
