--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,9 @@ name: Run Tests
 on:
   pull_request:
     branches: [ master ]
+  push:
+    branches:
+    - master
 
 jobs:
   unit:
@@ -42,3 +45,17 @@ jobs:
       run: ./scripts/integration.sh
       env:
         GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # upload-artifact:
+  #   name: Upload Artifact
+  #   runs-on: ubuntu-latest
+  #   needs: integration
+  #   - name: Authenticate on GCS
+  #     uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+  #     with:
+  #       version: '286.0.0'
+  #       service_account_email: ${{ secrets.GKE_EMAIL }}
+  #       service_account_key: ${{ secrets.GKE_KEY }}
+  #
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v2
