--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,24 @@ jobs:
     - name: Unit Test
       run: ./scripts/unit.sh
 
+  package-artifact:
+    name: Package Artifact
+    runs-on: ubuntu-latest
+    steps:
+
+    - name: Create new release version
+      run: |
+        export NEW_VERSION="$(./.github/utils/bump_patch.sh $(git describe --tags `git rev-list --tags --max-count=1`))"
+        echo "::set-env name=NEW_VERSION::$NEW_VERSION"
+
+    - name: Create new release version
+      run: |
+        export NEW_VERSION="artifact-$(git rev-parse HEAD)"
+        echo "::set-env name=ARTIFACT_NAME::$ARTIFACT_NAME"
+
+    - name: package
+      run: PACKAGE_DIR="$ARTIFACT_NAME" ./scripts/package.sh -a -v ${{ env.NEW_VERSION }}
+
   integration:
     name: Integration Tests
     runs-on: ubuntu-latest
@@ -42,20 +60,14 @@ jobs:
     - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
     - name: Integration Test
-      run: ./scripts/integration.sh
+      run: ./scripts/integration.sh 
       env:
         GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  # upload-artifact:
-  #   name: Upload Artifact
-  #   runs-on: ubuntu-latest
-  #   needs: integration
-  #   - name: Authenticate on GCS
-  #     uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-  #     with:
-  #       version: '286.0.0'
-  #       service_account_email: ${{ secrets.GKE_EMAIL }}
-  #       service_account_key: ${{ secrets.GKE_KEY }}
-  #
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v2
+    - uses: actions-hub/gcloud@master
+      env:
+        PROJECT_ID:
+        APPLICATION_CREDENTIALS: ${{ secrets.gcloud_access_key }}
+        CLI: gsutil
+      with:
+        args: cp "$ARTIFACT_NAME" gs://artifacts.paketo-buildpacks.appspot.com/pr-artifacts/go-compiler
