--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,13 @@ jobs:
   package-artifact:
     name: Package Artifact
     runs-on: ubuntu-latest
+    needs: unit
     steps:
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
     - name: Create new release version
       run: |
@@ -46,7 +52,7 @@ jobs:
   integration:
     name: Integration Tests
     runs-on: ubuntu-latest
-    needs: unit
+    needs: package-artifact
     steps:
     - name: Set up Go 1.14
       uses: actions/setup-go@v1
