--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,6 +72,7 @@ jobs:
 
     - uses: actions-hub/gcloud@master
       env:
+        PROJECT_ID: paketo-buildpacks
         APPLICATION_CREDENTIALS: ${{ secrets.gcloud_access_key }}
         CLI: gsutil
       with:
