--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,11 +91,17 @@ jobs:
     #   with:
     #     args: cp "${ARTIFACT_NAME}.tgz" gs://artifacts.paketo-buildpacks.appspot.com/pr-artifacts/go-compiler/
 
-    - name: Upload artifacts to gcp bucket
+  artifact-upload:
+    name: Upload artifacts to gcp bucket
+    runs-on: ubuntu-latest
+    needs: integration
+    steps:
+    - uses: actions/checkout@v2
     - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
         project_id: paketo-buildpacks
         service_account_key: ${{ secrets.gcloud_access_key }}
+        export_default_credentials: true
     - run: gsutil cp "${ARTIFACT_NAME}.tgz" gs://artifacts.paketo-buildpacks.appspot.com/pr-artifacts/go-compiler/
 
 
