refer using gopath

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -138,7 +138,7 @@ jobs:
     - name: Create Github Release Body
       run: |
         go get -u github.com/cloudfoundry/packit/cargo/jam
-        RELEASE_BODY=$(jam summarize --buildpack "${ARTIFACT_NAME}.tgz" --format markdown)
+        RELEASE_BODY=$($GOPATH/bin/jam summarize --buildpack "${ARTIFACT_NAME}.tgz" --format markdown)
         echo "::set-env name=RELEASE_BODY::$RELEASE_BODY"
 
     - name: Create Release
