--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -166,7 +166,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: "${ARTIFACT_NAME}.tgz"
-        asset_name: "${REPO_NAME}-${NEW_VERSION}.tgz"
+        asset_path: ${{ env.ARTIFACT_NAME }}.tgz
+        asset_name: ${{ env.REPO_NAME }}-${{ env.NEW_VERSION }}.tgz
         asset_content_type: application/gzip
 
