--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,80 +71,12 @@ jobs:
     - name: package
       run: PACKAGE_DIR="$ARTIFACT_NAME" ./scripts/package.sh -a -v ${{ env.NEW_VERSION }}
 
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-      with:
-        project_id: paketo-buildpacks
-        service_account_key: ${{ secrets.gcloud_access_key }}
-        export_default_credentials: true
-    - run: |
-        file="${ARTIFACT_NAME}.tgz"
-        echo uploading $file
-        gsutil cp "$file" "gs://artifacts.paketo-buildpacks.appspot.com/pr-artifacts/$REPO_NAME/"
-    - run: |
-        file="${ARTIFACT_NAME}.json"
-        echo uploading $file
-        gsutil cp "$file" "gs://artifacts.paketo-buildpacks.appspot.com/pr-artifacts/$REPO_NAME/"
-
-  create-release:
-    name: Create Release
-    runs-on: ubuntu-latest
-    needs: package-artifact
-    steps:
-
-    - name: Set up Go 1.14
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.14
-      id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
-
-    - name: Get Repo Name
-      run: |
-        # todo don't repeat REPO_NAME
-        REPO_NAME="$(basename `git rev-parse --show-toplevel`)"
-        echo "::set-env name=REPO_NAME::$REPO_NAME"
-
-    - name: Create Artifact Name
-      run: |
-        ARTIFACT_NAME="${REPO_NAME}-$(git rev-parse HEAD)"
-        echo "::set-env name=ARTIFACT_NAME::$ARTIFACT_NAME"
-
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-      with:
-        project_id: paketo-buildpacks
-        service_account_key: ${{ secrets.gcloud_access_key }}
-        export_default_credentials: true
-
-    - name: Download Artificat from bucket
-      run: |
-        GS_BUCKET_URL="gs://artifacts.paketo-buildpacks.appspot.com/pr-artifacts/$REPO_NAME"
-        if ! gsutil -q stat "${GS_BUCKET_URL}/${ARTIFACT_NAME}.tgz"; then
-          echo "The artifact tgz doesn't exist. Not creating release"
-          exit 1
-        fi
-        if ! gsutil -q stat "${GS_BUCKET_URL}/${ARTIFACT_NAME}.json"; then
-          echo "The artifact json doesn't exist. Not creating release"
-          exit 1
-        fi
-        echo downloading "${ARTIFACT_NAME}.tgz"
-        gsutil cp "${GS_BUCKET_URL}/${ARTIFACT_NAME}.tgz" .
-        echo downloading "${ARTIFACT_NAME}.json"
-        gsutil cp "${GS_BUCKET_URL}/${ARTIFACT_NAME}.json" .
-
-    - name: Read Artifact JSON
-      run: |
-        NEW_VERSION=$(cat "${ARTIFACT_NAME}.json" | jq -rj .version)
-        echo "::set-env name=NEW_VERSION::$NEW_VERSION"
-
     - name: Create Github Release Body
+      id: create-release-body
       run: |
         go install github.com/cloudfoundry/packit/cargo/jam
         RELEASE_BODY=$($HOME/go/bin/jam summarize --buildpack "${ARTIFACT_NAME}.tgz" --format markdown)
-        echo "::set-env name=RELEASE_BODY::$RELEASE_BODY"
+        echo "::set-output name=release_body::$RELEASE_BODY"
 
     - name: Create Release
       id: create_release
@@ -155,7 +87,7 @@ jobs:
         tag_name: ${{ env.NEW_VERSION }}
         release_name: ${{ env.NEW_VERSION }}
         body: |
-          ${{ env.RELEASE_BODY }}
+          ${{ steps.create-release-body.outputs.release_body }}
         draft: false
         prerelease: false
 
