--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,79 +1,66 @@
 name: Create Release
 
-# on:
-#   push:
-#     branches:
-#     - master
+on:
+  push:
+    branches:
+    - master
 
 jobs:
-  create-release-artifact:
-    name: Create Release Artifact
+  release:
+    name: Release
     runs-on: ubuntu-latest
     steps:
-
-    - name: Set up Go 1.14
+    - name: Checkout
+      uses: actions/checkout@v2
+    - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+    - name: Setup Go
       uses: actions/setup-go@v1
       with:
         go-version: 1.14
-      id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
-
-    - name: Create new release version
+    - name: Run Unit Tests
+      run: ./scripts/unit.sh
+    - name: Run Integration Tests
+      run: ./scripts/integration.sh
+    - name: Tag
+      id: tag
       run: |
-        export NEW_VERSION="$(./.github/utils/bump_patch.sh $(git describe --tags `git rev-list --tags --max-count=1`))"
-        echo "::set-env name=NEW_VERSION::$NEW_VERSION"
-
-    # - name: package
-    #   run: PACKAGE_DIR=artifact ./scripts/package.sh -a -v ${{ env.NEW_VERSION }}
-
-
+        TAG="$(./.github/util/tag.sh)"
+        echo "::set-output name=tag::$TAG"
+    - name: Package
+      env:
+        TAG: ${{ steps.tag.outputs.tag }}
+      run: PACKAGE_DIR=artifact.tgz ./scripts/package.sh --version "${TAG}" --archive
+    - name: Create Release Notes
+      id: create-release-notes
+      run: |
+        go install github.com/cloudfoundry/packit/cargo/jam
+        RELEASE_BODY=$($HOME/go/bin/jam summarize --buildpack "artifact.tgz" --format markdown)
+        # Coz of this messed up issue
+        # https://github.community/t5/GitHub-Actions/set-output-Truncates-Multiline-Strings/m-p/38372#M3322
+        RELEASE_BODY="${RELEASE_BODY//'%'/'%25'}"
+        RELEASE_BODY="${RELEASE_BODY//$'\n'/'%0A'}"
+        RELEASE_BODY="${RELEASE_BODY//$'\r'/'%0D'}"
+        echo "::set-output name=release_body::$RELEASE_BODY"
     - name: Create Release
-      id: create_release
+      id: create-release
       uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ env.NEW_VERSION }}
-        #release_name: Release ${{ github.ref }}
-        release_name: Release ${{ env.NEW_VERSION }}
-        body: |
-          Changes in this Release
-          - First Change
-          - Second Change
-        draft: false
-        prerelease: false
-
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-      with:
-        project_id: paketo-buildpacks
-        service_account_key: ${{ secrets.gcloud_access_key }}
-        export_default_credentials: true
-    - run: |
-        ARTIFACT_NAME="artifact-$(git rev-parse HEAD)"
-        DOWNLOADED="${ARTIFACT_NAME}.tgz"
-        GS_URL="gs://artifacts.paketo-buildpacks.appspot.com/pr-artifacts/go-compiler/${DOWNLOADED}"
-        if ! gsutil -q stat ${GS_URL}; then
-          echo "The artifact doesn't exist. Not creating release"
-          exit 1
-        fi
-        echo downloading $DOWNLOADED
-        gsutil cp ${GS_URL} "$DOWNLOADED"
-        gsutil hash -m "$DOWNLOADED"
-        echo "::set-env name=DOWNLOADED::$DOWNLOADED"
-
+         tag_name: ${{ steps.tag.outputs.tag }}
+         release_name: ${{ steps.tag.outputs.tag }}
+          body: |
+            ${{ steps.create-release-notes.outputs.release_body }}
+          draft: false
+          prerelease: false
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ./${DOWNLOADED}
-        asset_name: artifact-${NEW_VERSION}.tgz
+        upload_url: ${{ steps.create-release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+        asset_path: artifact.tgz
+        asset_name: ${{ github.event.repository.name }}-${{ steps.tag.outputs.tag }}.tgz
         asset_content_type: application/gzip
-
 
