--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -34,7 +34,7 @@ jobs:
       id: create-release-notes
       run: |
         go install github.com/cloudfoundry/packit/cargo/jam
-        RELEASE_BODY=$($HOME/go/bin/jam summarize --buildpack "artifact.tgz" --format markdown)
+        RELEASE_BODY=$($HOME/go/bin/jam summarize --buildpack "${PWD}/artifact.tgz" --format markdown)
         # Coz of this messed up issue
         # https://github.community/t5/GitHub-Actions/set-output-Truncates-Multiline-Strings/m-p/38372#M3322
         RELEASE_BODY="${RELEASE_BODY//'%'/'%25'}"
