--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -6,8 +6,8 @@ on:
     - master
 
 jobs:
-  release:
-    name: Release
+  test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -21,9 +21,18 @@ jobs:
       run: ./scripts/unit.sh
     - name: Run Integration Tests
       run: ./scripts/integration.sh
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Tag
       id: tag
       run: |
+        git fetch --depth=1 origin +refs/tags/*:refs/tags/*
         TAG="$(./.github/util/tag.sh)"
         echo "::set-output name=tag::$TAG"
     - name: Package
@@ -33,8 +42,12 @@ jobs:
     - name: Create Release Notes
       id: create-release-notes
       run: |
-        go install github.com/cloudfoundry/packit/cargo/jam
-        RELEASE_BODY=$($HOME/go/bin/jam summarize --buildpack "${PWD}/artifact.tgz" --format markdown)
+        curl "https://github.com/cloudfoundry/packit/releases/download/v0.0.4/jam-linux" \
+          --silent \
+          --location \
+          --output /usr/local/bin/jam
+        chmod +x /usr/local/bin/jam
+        RELEASE_BODY=$(jam summarize --buildpack "${PWD}/artifact.tgz" --format markdown)
         # Coz of this messed up issue
         # https://github.community/t5/GitHub-Actions/set-output-Truncates-Multiline-Strings/m-p/38372#M3322
         RELEASE_BODY="${RELEASE_BODY//'%'/'%25'}"
