--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -43,7 +43,7 @@ jobs:
       id: create-release-notes
       run: |
         mkdir -p "${HOME}/bin"
-        export PATH="${HOME}/bin"
+        export PATH="${PATH}:${HOME}/bin"
         curl "https://github.com/cloudfoundry/packit/releases/download/v0.0.4/jam-linux" \
           --silent \
           --location \
